bug fix, refactoring, stretch ui goals, thumbnail gallery working

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -35,6 +35,11 @@ body {
   // display: flex;
   // min-height: 100vh;
   // flex-direction: column;
+
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 a, button, input {
