--- a/app/assets/stylesheets/preview-project.scss
+++ b/app/assets/stylesheets/preview-project.scss
@@ -149,6 +149,10 @@
   width: 6em;
   // height: 6em;
   box-shadow: $default-shadow;
+  transition: 0.3s border, 0.3s border-radius;
+  -webkit-transition: 0.3s border, 0.3s border-radius;
+  border-radius: 0px;
+  border: 0px solid transparent;
 
   &:hover {
     box-shadow: $hover-shadow;
@@ -165,6 +169,22 @@
       stroke: none;
     }
   }
+
+  &.active {
+    border: 3px solid $accent-darkest;
+    border-radius: 2px;
+  }
+}
+
+.big-preview {
+  opacity: 0;
+  position: absolute;
+}
+.big-preview.show {
+  transition: 0.3s opacity ease-out;
+  -webkit-transition: 0.3s opacity ease-out;
+  opacity: 1;
+  position: static;
 }
 
 .current-preview {
